--- a/index.html
+++ b/index.html
@@ -183,6 +183,18 @@
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 15px;
     }
+    .video-container iframe {
+  width: 100%;
+  height: 100%;
+  max-height: 450px; /* ارتفاع أقصى على desktop */
+  border-radius: 12px;
+}
+@media (max-width: 768px) {
+  .video-container iframe {
+    height: 220px; /* mobile height */
+  }
+}
+
 
 .download {
   text-align: center;
@@ -221,9 +233,21 @@
 }
 
     /* ===== Cards Professional Design ===== */
-    #guide{
-      padding: 10px 0;
-    }
+    /* Guide & System Grid */
+.guide-grid {
+  display: grid;
+  grid-template-columns: 1fr; /* mobile default 1 column */
+  gap: 20px;
+  margin-top: 20px;
+}
+
+@media (min-width: 768px) {
+  .guide-grid {
+    grid-template-columns: repeat(3, 1fr); /* 3 columns on desktop */
+  }
+}
+
+
 .card {
   background: var(--light);
   padding: 25px;
@@ -417,14 +441,24 @@
   </section>
 
   <!-- Screenshots -->
-  <section class="container" id="screenshots">
-    <h2 class="section-title">In-Game Screenshots</h2>
-    <div class="screenshots">
-      <img src="https://pics.tutuapp.com/picture/app_ios/us/2022/08/17/11/b417xjqy0xrf.jpg" alt="screenshot1">
-      <img src="https://pics.tutuapp.com/picture/app_ios/us/2022/08/17/11/76bbhbpeqmec.jpg" alt="screenshot2">
-      <img src="https://pics.tutuapp.com/picture/app_ios/us/2022/08/17/11/6p4uzghupu68.jpg" alt="screenshot3">
-    </div>
-  </section>
+ <section class="container" id="screenshots">
+  <h2 class="section-title">In-Game Screenshots & Video</h2>
+  <div class="screenshots">
+    <img src="https://i.ytimg.com/vi/H_5TVuBgW-M/maxresdefault.jpg" alt="screenshot1">
+    <img src="https://i.ytimg.com/vi/Wz9HmWh9-yA/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCAbIMiee9qAtiX9v22Igc2o65l9A" alt="screenshot2">
+  </div>
+
+  <!-- Video Embed -->
+  <div class="video-container" style="margin-top:20px;">
+  <iframe width="100%" height="400" 
+    src="https://www.youtube.com/embed/Of8OvVRKI1w?modestbranding=1&rel=0" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+</div>
+
+</section>
+
 
   <!-- Download -->
   <section class="download" id="download">
@@ -434,8 +468,8 @@
   </section>
 
   <!-- Guide & System -->
-  <section class="container" id="guide">
-    <div class="grid-2">
+  <section class="container " id="guide">
+    <div class="grid-2 guide-grid">
       <div class="card">
         <h3>Installation Guide</h3>
         <ul>
